{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 281,
  "lineage": "a064fc84-1dc1-666c-98e1-5a8ebffb0777",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0e20d3b890c8edfba"
              }
            ],
            "id": "igw-026b2861ab3287ba0",
            "internet_gateway_id": "igw-026b2861ab3287ba0",
            "owner_id": "361648904729",
            "tags": {
              "Name": "main-vpn-gateway"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:vpc/vpc-0e20d3b890c8edfba",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d941baeb0ea61035",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-cbf08fac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e20d3b890c8edfba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e46999fac19100fa",
            "owner_id": "361648904729",
            "state": "available",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00b082f2626f14276",
            "domain": "vpc",
            "id": "eipalloc-0a156abc24211bf61",
            "instance": "i-07a990f565e97196a",
            "network_interface": "eni-02205479c96d40eaf",
            "private_dns": "ip-172-31-50-135.ap-southeast-1.compute.internal",
            "private_ip": "172.31.50.135",
            "public_dns": "ec2-52-221-156-33.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.156.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.linux",
            "aws_security_group.linux",
            "aws_subnet.sn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00af8e5b1cceb0ec4",
            "domain": "vpc",
            "id": "eipalloc-06132e24e0deb454e",
            "instance": "i-073a7a650d252a82a",
            "network_interface": "eni-07d7e7afc7d2157f9",
            "private_dns": "ip-172-31-60-35.ap-southeast-1.compute.internal",
            "private_ip": "172.31.60.35",
            "public_dns": "ec2-54-169-238-102.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.238.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.windows",
            "aws_security_group.windows",
            "aws_subnet.sn_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061eb2b23f9f8839c",
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:instance/i-07a990f565e97196a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "AmazonSSMRoleForInstancesQuickSetup",
            "id": "i-07a990f565e97196a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "monitoring": false,
            "primary_network_interface_id": "eni-02205479c96d40eaf",
            "private_dns": "ip-172-31-50-135.ap-southeast-1.compute.internal",
            "private_ip": "172.31.50.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e212855e5be90112",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04f00736233eb6f84"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6365df3d551843c",
            "tags": {
              "Name": "HelloWorld-Linux"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f00736233eb6f84"
            ]
          },
          "dependencies": [
            "aws_security_group.linux",
            "aws_subnet.sn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0231f120d90c28482",
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:instance/i-073a7a650d252a82a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": true,
            "iam_instance_profile": "AmazonSSMRoleForInstancesQuickSetup",
            "id": "i-073a7a650d252a82a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "monitoring": false,
            "password_data": "WmdQp14G4FhlJMcwqcmqPdujtTAtUXHllzCFQ++om5tPVvjA2XscgtATHsCUpIOUWlVjaXE3AagPcq67GJb6gU4+glzG9X1cYfeDHkHZf9b5JJv7Bti67FagJDns+baCQuB0Hho1tAF1dO3ntF71pmmllrgV3WqU/wEtr4IPqVkcm1GMZaElpzfiZ5i9Cv0AO8iCWUvtggnWDxp1fHSVqBdjufbbInaOvIQdO3YrqdTD9vB7JSaF5ibfyC3Q3wKhTyyY67uLGBeWBERJCkKsnAWuKni13XlDqrDlMSN3SwpJ6+wYIhbagHCETV+AzvjVnjCwKmCs1QUpuUNlm6PYGA==",
            "primary_network_interface_id": "eni-07d7e7afc7d2157f9",
            "private_dns": "ip-172-31-60-35.ap-southeast-1.compute.internal",
            "private_ip": "172.31.60.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-016fb87ec0325b610",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0876ec1b9d16d3629"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc753ab163d27acd",
            "tags": {
              "Name": "HelloWorld-Windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0876ec1b9d16d3629"
            ]
          },
          "dependencies": [
            "aws_security_group.windows",
            "aws_subnet.sn_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e46999fac19100fa",
            "owner_id": "361648904729",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b2861ab3287ba0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-0e20d3b890c8edfba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:security-group/sg-04f00736233eb6f84",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f00736233eb6f84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_linux",
            "name_prefix": null,
            "owner_id": "361648904729",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e20d3b890c8edfba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:security-group/sg-0876ec1b9d16d3629",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0876ec1b9d16d3629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5985
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_windows",
            "name_prefix": null,
            "owner_id": "361648904729",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e20d3b890c8edfba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:subnet/subnet-0c6365df3d551843c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.50.0/24",
            "id": "subnet-0c6365df3d551843c",
            "map_public_ip_on_launch": false,
            "owner_id": "361648904729",
            "tags": {
              "Name": "sn_linux"
            },
            "vpc_id": "vpc-0e20d3b890c8edfba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:subnet/subnet-0fc753ab163d27acd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.60.0/24",
            "id": "subnet-0fc753ab163d27acd",
            "map_public_ip_on_launch": false,
            "owner_id": "361648904729",
            "tags": {
              "Name": "sn_windows"
            },
            "vpc_id": "vpc-0e20d3b890c8edfba"
          }
        }
      ]
    }
  ]
}